        can get all of the silva objects that are not publishable
        content with one method that is not get_assets. get_assets
        remains, but should now only be used to get all the assets
        (i.e. files, images, etc.) in a folder. To get everything that
        is not a publishable use get_non_publishables instead.

    Features ported from 2.1 branch:

    Bugs Fixed:

      - Fixed 101827: lookup window was always displaying the new
        'place reference to container...' button, even when containers
        (specifically the container's meta type) wasn't in the
        filter list for the lookup window

    Bugfixes ported from 2.1 branch:

      - Silva Documents with code sources no longer lose the parameter
        types of the codes source parameters on xmlexport.

      - Make sure that pressing the tab key when inside the kupu editor 
        will always perform the indent/outdent editor commands.
        This was not working anymore on Firefox3)

      - Rebuilding the catalog sometimes ran out of memory, since it
        was done in one huge transaction. Added a generator to lazily
        get objects to reindex, and then commit after every 500
        objects. The exact number might need tweaking. (I suspect 500
        is on the conservative side.)

      - html in parameters of external sources is no longer double
        escaped on saving.

      - fixed 263503: adding support for relative links with query parameters 
        (e.g. /path/to/object?key=value)

      - correct unauthorized error when a chief editor/manager want to
        use the access tab and he don't have any access in the Silva
        root and the service members implements the use direct lookup
        protocol.

      - fixed a bug in tab_edit.pt where a dynamic string was being
        i18n-ed.

    Ported from 2.0 branch:

      - added logging to catalog rebuilds, because they can
        potentially take a very long time.
